fix for disabled input field text not vidisble on iOS

--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -84,6 +84,7 @@
         &:disabled {
             background-color: rgba($color-gray-4, .5);
             color: $color-gray-5;
+            -webkit-text-fill-color: $color-gray-5;
         }
 
         &:disabled:hover {
